# remote-askpass

./: .gitattributes  .gitignore  Cargo.toml  README.md  create_zip.py
docs/: spec.md
linux-helper/: install.sh  remote-askpass  rsudo
windows-agent/: Cargo.toml  README.md
windows-agent/src/: main.rs
