[package]
name = "remote-askpass-windows-agent"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
parking_lot = "0.12"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rpassword = "7.4"
rustls = "0.23"
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
tray-icon = "0.21"
windows-sys = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
